src/test/deca/codegen/invalid/resultats/var10-ima.res
  ** IMA ** ERREUR ** Ligne 158 : 
    WFLOAT avec R1 indefini
